<resources>
    <!-- Pagina Principal -->
    <string name="app_name">ScatterBrain</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_google_login">Iniciar Sesión con Google</string>
    <string name="logo_description">Scatterbrain Logo</string>

    <!-- Pagina de email -->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="camp_required">Es necesario rellenar todos los campos</string>
    <string name="invalid_email">Correo no valido</string>
    <string name="password_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_success">Registro exitoso! Bienvenido</string>
    <string name="register_error">Ha ocurrido un error en el registro</string>
    <string name="login_success">Bienvenido</string>
    <string name="login_error">Ha ocurrido un error en el inicio de sesión</string>

    <!-- Pagina Home -->
    <string name="create_room">Crear sala</string>
    <string name="join_room">Unirse a sala</string>
    <string name="play">Jugar</string>
    <string name="username">Nombre de usuario</string>
    <string name="room_code">Codigo de la sala</string>

    <!-- Pagina de Ajustes -->
    <string name="idioma">IDIOMA</string>
    <string name="dificultad">DIFICULTAD</string>
    <string name="oscuro">OSCURO</string>
    <string name="jugar">JUGAR</string>

    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Italiano</item>
    </string-array>

    <string-array name="dificultades">
        <item>Fácil</item>
        <item>Normal</item>
        <item>Difícil</item>
    </string-array>
</resources>